feat: add run command endpoint
